1. A list of tasks appears 2. When you press a task, it dies 3. Also you can update this list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MrTask</string>
     <string name="title_home">Refresh</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Kill</string>
+    <!--<string name="title_dashboard">Dashboard</string>-->
+    <!--<string name="title_notifications">Kill</string>-->
 </resources>
